--- a/apps/web/src/layout/BaseLayout/Footer/components/MoreLinks.astro
+++ b/apps/web/src/layout/BaseLayout/Footer/components/MoreLinks.astro
@@ -27,8 +27,8 @@ const MORE_LINKS = [
 
 <ul
   class={cn(
-    "flex items-center justify-center text-center leading-none font-bakbak bg-black text-primary px-8",
-    "py-2 gap-2 flex-col",
+    "font-bakbak text-primary flex items-center justify-center bg-black px-8 text-center leading-none",
+    "flex-col gap-2 py-2",
     "sm:flex-row sm:gap-4",
     "lg:py-2 lg:text-lg",
   )}
