--- a/apps/web/src/layout/BaseLayout/Footer/components/Titles.astro
+++ b/apps/web/src/layout/BaseLayout/Footer/components/Titles.astro
@@ -5,8 +5,8 @@ const CURRENT_YEAR = new Date().getFullYear();
 ---
 
 <div class={cn("w-full", "text-center", "sm:text-left")}>
-  <h2 class={cn("font-bebas font-bold uppercase leading-none!", "text-6xl", "sm:text-7xl")}>Frustration Magazine</h2>
-  <h3 class={cn("font-bakbak leading-none! uppercase text-xl")}>Le média de la lutte des classes</h3>
+  <h2 class={cn("font-bebas leading-none! font-bold uppercase", "text-6xl", "sm:text-7xl")}>Frustration Magazine</h2>
+  <h3 class={cn("font-bakbak leading-none! text-xl uppercase")}>Le média de la lutte des classes</h3>
   <p class="font-open-sans mt-2 text-sm">
     © Frustration Magazine – {CURRENT_YEAR}
   </p>
