--- a/apps/web/src/pages/_components/ALaUne/ALaUne.astro
+++ b/apps/web/src/pages/_components/ALaUne/ALaUne.astro
@@ -7,7 +7,7 @@ import AllArticles from "../AllArticles.astro";
 const { posts } = Astro.props;
 ---
 
-<section class={cn("h-fit w-full m-auto max-w-[2200px]", "mt-4 md:mt-10 lg:mt-12 xl:mt-24", "px-2 sm:px-8")}>
+<section class={cn("m-auto h-fit w-full max-w-[2200px]", "mt-4 md:mt-10 lg:mt-12 xl:mt-24", "px-2 sm:px-8")}>
   <SectionTitle>À la une</SectionTitle>
 
   {/* Thumbnails */}
