--- a/apps/web/src/pages/_components/Interviews/SeeMore.astro
+++ b/apps/web/src/pages/_components/Interviews/SeeMore.astro
@@ -7,10 +7,10 @@ const SEARCH_INTERVIEWS_LINK = "/posts?category=entretiens";
 <a
   href={SEARCH_INTERVIEWS_LINK}
   class={cn(
-    "flex w-fit items-center bg-white transition-transform hover:scale-110 font-bebas m-auto  leading-none text-black",
-    "text-2xl px-4 py-2 mt-20",
-    "sm:text-3xl sm:mt-14",
-    "md:px-5 md:py-3 md:gap-3 md:mt-14",
+    "font-bebas m-auto flex w-fit items-center bg-white leading-none text-black transition-transform hover:scale-110",
+    "mt-20 px-4 py-2 text-2xl",
+    "sm:mt-14 sm:text-3xl",
+    "md:mt-14 md:gap-3 md:px-5 md:py-3",
   )}
 >
   <MessageIcon />
