--- a/apps/web/src/layout/BaseLayout/Footer/components/H5.astro
+++ b/apps/web/src/layout/BaseLayout/Footer/components/H5.astro
@@ -2,6 +2,6 @@
 import { cn } from "@/lib/utils";
 ---
 
-<h5 class={cn("mb-1 font-bakbak leading-[90%]!", "text-3xl text-center", "sm:text-3xl sm:text-left")}>
+<h5 class={cn("font-bakbak leading-[90%]! mb-1", "text-center text-3xl", "sm:text-left sm:text-3xl")}>
   <slot />
 </h5>
