--- a/apps/web/src/layout/PostLayout/PostLayout.astro
+++ b/apps/web/src/layout/PostLayout/PostLayout.astro
@@ -53,7 +53,7 @@ const featuredImage = Astro.props?.featuredImage?.node;
   <!-- Summary -->
   <div
     slot="right"
-    class={cn("sticky top-[75px] mx-12", "hidden", "xl:max-w-[300px] xl:block", "2xl:max-w-[600px] ")}
+    class={cn("sticky top-[75px] mx-12", "hidden", "xl:block xl:max-w-[300px]", "2xl:max-w-[600px]")}
   >
     <PostSummary client:load />
   </div>
