--- a/apps/web/src/layout/PostLayout/components/Footer/CardAuthor.astro
+++ b/apps/web/src/layout/PostLayout/components/Footer/CardAuthor.astro
@@ -7,12 +7,12 @@ const { author } = Astro.props;
 ---
 
 <a
-  class={cn("shadow-md block bg-cover bg-bottom rounded-xl text-white", "p-3 my-3", "sm:p-6 sm:my-5 ")}
+  class={cn("block rounded-xl bg-cover bg-bottom text-white shadow-md", "my-3 p-3", "sm:my-5 sm:p-6")}
   href={`/posts?author=${author.slug}`}
   style={`background-image: url(${BackgroundCard.src})`}
 >
   <div class={cn("flex items-center", "gap-4", "sm:gap-6")}>
-    <div class={cn("shrink-0 size-11", "sm:size-14", "lg:size-16")}>
+    <div class={cn("size-11 shrink-0", "sm:size-14", "lg:size-16")}>
       <Image
         title={author.name}
         alt={author.name}
