--- a/apps/web/src/layout/PostLayout/components/Header/Title.astro
+++ b/apps/web/src/layout/PostLayout/components/Header/Title.astro
@@ -4,8 +4,8 @@ import { cn } from "@/lib/utils";
 
 <h1
   class={cn(
-    "pb-2 font-bakbak text-balance uppercase break-words leading-[90%]",
-    "border-black border-b-[5px] text-[2.3rem] leading-none mb-3",
+    "font-bakbak text-balance break-words pb-2 uppercase leading-[90%]",
+    "mb-3 border-b-[5px] border-black text-[2.3rem] leading-none",
     "xs:border-b-[5px] xs:text-5xl mb-4",
     "sm:border-b-[5px] sm:text-6xl",
     "md:border-b-[8px] md:text-7xl",
