--- a/apps/web/src/pages/_components/Auteurs/AuthorsGrid.astro
+++ b/apps/web/src/pages/_components/Auteurs/AuthorsGrid.astro
@@ -20,7 +20,7 @@ type Author = {
 const { authors, className } = Astro.props;
 ---
 
-<ul class={cn("grid grid-cols-1 sm:grid-cols-2 gap-8", className)}>
+<ul class={cn("grid grid-cols-1 gap-8 sm:grid-cols-2", className)}>
   {
     authors.map((author: Author) => (
       <AuthorCard
