--- a/apps/web/src/pages/_components/Interviews/Title.astro
+++ b/apps/web/src/pages/_components/Interviews/Title.astro
@@ -4,12 +4,12 @@ import { cn } from "@/lib/utils";
 
 <h2
   class={cn(
-    "title relative m-auto  w-fit font-bakbak uppercase text-white select-none",
-    "text-4xl mb-2",
+    "title font-bakbak relative m-auto w-fit select-none uppercase text-white",
+    "mb-2 text-4xl",
     "xs:text-5xl mb-3",
-    "sm:text-6xl sm:mb-8",
-    "md:text-7xl md:mb-12",
-    "lg:text-9xl lg:mb-16",
+    "sm:mb-8 sm:text-6xl",
+    "md:mb-12 md:text-7xl",
+    "lg:mb-16 lg:text-9xl",
     "xl:text-10xl xl:mb-24",
   )}
 >
