--- a/apps/web/src/pages/_components/MainSlider/Slide.astro
+++ b/apps/web/src/pages/_components/MainSlider/Slide.astro
@@ -19,7 +19,7 @@ const IMAGE_SIZE = 1200;
       <!-- Title -->
       <h3
         class={cn(
-          "rounded-t-sm uppercase leading-1 text-balance bg-black px-10 py-4 text-center font-bakbak font-bold text-primary",
+          "leading-1 font-bakbak text-primary text-balance rounded-t-sm bg-black px-10 py-4 text-center font-bold uppercase",
           "text-2xl",
           "sm:text-3xl",
           "md:text-4xl",
@@ -41,10 +41,10 @@ const IMAGE_SIZE = 1200;
       <div
         class={cn(
           "font-bakbak m-auto mt-4 flex w-fit items-center rounded-lg font-bold shadow-2xl shadow-black/80",
-          "bg-primary text-black px-5 py-1 gap-1 text-lg",
+          "bg-primary gap-1 px-5 py-1 text-lg text-black",
           "md:gap-2 md:py-2 md:text-xl",
           "lg:px-6 lg:py-2 lg:text-2xl",
-          "xl:text-primary xl:bg-black/90 xl:gap-3",
+          "xl:text-primary xl:gap-3 xl:bg-black/90",
         )}
       >
         <Newspaper size={20} />
