--- a/apps/web/src/pages/_components/Interviews/SeeMore.astro
+++ b/apps/web/src/pages/_components/Interviews/SeeMore.astro
@@ -1,7 +1,7 @@
 ---
 import { cn } from "@/lib/utils";
 import { LuMessagesSquare as MessageIcon } from "react-icons/lu";
-const SEARCH_INTERVIEWS_LINK = "/posts?category=entretiens";
+const SEARCH_INTERVIEWS_LINK = "/posts?category=entretien";
 ---
 
 <a
