--- a/apps/web/src/pages/evenements/index.astro
+++ b/apps/web/src/pages/evenements/index.astro
@@ -43,7 +43,7 @@ const displayedEvents = events.filter(({ date, displayEvent }) => displayEvent &
                 <div class="absolute z-10 opacity-5" />
                 <CardEvent {event}>
                   <Image
-                    src={SaintLuigi}
+                    src="/img/papers/saint-luigi.webp"
                     alt={`Couverture de "Saint Luigi" de Nicolas Framont`}
                     width="200"
                     height="500"
