--- a/apps/web/src/pages/404.astro
+++ b/apps/web/src/pages/404.astro
@@ -4,12 +4,12 @@ export const prerender = false;
 ---
 
 <BaseLayout title="Page inexistante">
-  <div class="flex h-[700px] flex-col justify-center gap-3 text-center">
+  <div class="flex h-[700px] flex-col items-center justify-start gap-8 bg-white p-16">
     <p class="text-3xl">La page que vous recherchez n'existe pas 😭</p>
     <a
       href="/"
-      class="text-blue text-xl font-bold underline"
-      >Retour à la page d'accueil</a
+      class="bg-primary rounded-md px-4 py-2 text-xl font-bold"
+      >↩️ Retour à la page d'accueil</a
     >
   </div>
 </BaseLayout>
