--- a/apps/web/src/pages/sorties-papier/index.astro
+++ b/apps/web/src/pages/sorties-papier/index.astro
@@ -4,9 +4,9 @@ import CardPaper from "./_components/CardPaper.astro";
 import H2 from "@/components/H2";
 import H3 from "@/components/H3";
 
-import numeroPapier1 from "./_assets/numero-papier-1.webp";
-import numeroPapier2 from "./_assets/numero-papier-2.webp";
-import saintLuigi from "./_assets/saint-luigi.webp";
+import numeroPapier1 from "@/assets/papers/numero-papier-1.webp";
+import numeroPapier2 from "@/assets/papers/numero-papier-2.webp";
+import saintLuigi from "@/assets/papers/saint-luigi.webp";
 
 type PaperItem = {
   title: string;
