--- a/apps/web/src/pages/evenements/index.astro
+++ b/apps/web/src/pages/evenements/index.astro
@@ -3,10 +3,12 @@ import PageLayout from "@/layout/PageLayout/PageLayout.astro";
 import CardEvent from "./_components/CardEvent";
 import H2 from "@/components/H2";
 import H3 from "@/components/H3";
+
+import { Image } from "astro:assets";
+import saintLuigi from "@/assets/papers/saint-luigi.webp";
+
 import { readRecords } from "data-access/prisma";
 import { type Event } from "./_models";
-import SaintLuigi from "./_assets/saint_luigi.webp";
-import { Image } from "astro:assets";
 import { OG_IMAGES_URL } from "@/constants";
 
 export const prerender = false;
@@ -43,7 +45,7 @@ const displayedEvents = events.filter(({ date, displayEvent }) => displayEvent &
                 <div class="absolute z-10 opacity-5" />
                 <CardEvent {event}>
                   <Image
-                    src="/img/papers/saint-luigi.webp"
+                    src={saintLuigi}
                     alt={`Couverture de "Saint Luigi" de Nicolas Framont`}
                     width="200"
                     height="500"
