--- a/apps/web/src/pages/sorties-papier/_components/CardPaper.astro
+++ b/apps/web/src/pages/sorties-papier/_components/CardPaper.astro
@@ -1,7 +1,6 @@
 ---
 import { cn } from "@/lib/utils";
 import { Image } from "astro:assets";
-// import { ExternalLinkIcon } from "lucide-react";
 
 const { paper } = Astro.props;
 ---
@@ -21,6 +20,7 @@ const { paper } = Astro.props;
       title={paper.title}
       src={paper.image}
       alt={paper.title}
+      inferSize={true}
       class="h-72 object-cover object-top transition-transform duration-300 group-hover:scale-105 sm:h-80 md:h-72"
     />
 
