🐛 fix(web): update subscription items to reflect correct book title

--- a/apps/web/src/pages/abonnements/index.astro
+++ b/apps/web/src/pages/abonnements/index.astro
@@ -174,7 +174,7 @@ const ogImageUrl = `${OG_IMAGES_URL}numero_2025.webp`;
           🗞️ <b>Numéro papier 2025</b>
         </p>
         <p>
-          📖 1 exemplaire de <b><i>Saint Luigi</i></b>
+          📕 1 exemplaire de <b><i>Saint Luigi</i></b>
         </p>
         <div class="mx-auto flex w-full items-center justify-center gap-4">
           <Image
